[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/KwadConfig.gd" type="Script" id=1]
[ext_resource path="res://Script/RateGraph.gd" type="Script" id=2]


[node name="KwadConfig" type="Panel"]
pause_mode = 2
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -610.0
margin_top = -135.0
margin_right = -6.0
margin_bottom = 135.0
script = ExtResource( 1 )

[node name="Header" type="Control" parent="."]
editor/display_folded = true
margin_left = 80.0
margin_top = 10.0
margin_right = 570.0
margin_bottom = 30.0

[node name="Label" type="Label" parent="Header"]
margin_left = -10.0
margin_right = 30.0
margin_bottom = 14.0
text = "P"

[node name="Label2" type="Label" parent="Header"]
margin_left = 70.0
margin_right = 110.0
margin_bottom = 14.0
text = "I"

[node name="Label3" type="Label" parent="Header"]
margin_left = 140.0
margin_right = 180.0
margin_bottom = 14.0
text = "D"

[node name="Label4" type="Label" parent="Header"]
margin_left = 219.5
margin_right = 264.5
margin_bottom = 14.0
text = "RC rate"

[node name="Label5" type="Label" parent="Header"]
margin_left = 296.0
margin_right = 361.0
margin_bottom = 14.0
text = "Super rate"

[node name="Label6" type="Label" parent="Header"]
margin_left = 370.0
margin_right = 420.0
margin_bottom = 14.0
text = "Max Vel"

[node name="Label7" type="Label" parent="Header"]
margin_left = 430.0
margin_right = 482.0
margin_bottom = 15.0
text = "RC expo"

[node name="RollBackground" type="Panel" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 10.0
margin_top = 30.0
margin_right = 60.0
margin_bottom = 54.0

[node name="RollContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 20.0
margin_top = 30.0
margin_right = 600.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="RollContainer"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
text = "Roll"
valign = 1

[node name="P" type="SpinBox" parent="RollContainer"]
margin_left = 44.0
margin_right = 118.0
margin_bottom = 24.0

[node name="I" type="SpinBox" parent="RollContainer"]
margin_left = 122.0
margin_right = 196.0
margin_bottom = 24.0

[node name="D" type="SpinBox" parent="RollContainer"]
margin_left = 200.0
margin_right = 274.0
margin_bottom = 24.0

[node name="RCrate" type="SpinBox" parent="RollContainer"]
margin_left = 278.0
margin_right = 352.0
margin_bottom = 24.0

[node name="SuperRate" type="SpinBox" parent="RollContainer"]
margin_left = 356.0
margin_right = 430.0
margin_bottom = 24.0

[node name="Vel" type="Label" parent="RollContainer"]
margin_left = 434.0
margin_top = 5.0
margin_right = 474.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
text = "666"

[node name="RCexpo" type="SpinBox" parent="RollContainer"]
margin_left = 478.0
margin_right = 552.0
margin_bottom = 24.0

[node name="PitchBackground" type="Panel" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
margin_left = 10.0
margin_top = 60.0
margin_right = 60.0
margin_bottom = 84.0

[node name="PitchContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 20.0
margin_top = 60.0
margin_right = 600.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="PitchContainer"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
text = "Pitch"
valign = 1

[node name="P" type="SpinBox" parent="PitchContainer"]
margin_left = 44.0
margin_right = 118.0
margin_bottom = 24.0

[node name="I" type="SpinBox" parent="PitchContainer"]
margin_left = 122.0
margin_right = 196.0
margin_bottom = 24.0

[node name="D" type="SpinBox" parent="PitchContainer"]
margin_left = 200.0
margin_right = 274.0
margin_bottom = 24.0

[node name="RCrate" type="SpinBox" parent="PitchContainer"]
margin_left = 278.0
margin_right = 352.0
margin_bottom = 24.0

[node name="SuperRate" type="SpinBox" parent="PitchContainer"]
margin_left = 356.0
margin_right = 430.0
margin_bottom = 24.0

[node name="Vel" type="Label" parent="PitchContainer"]
margin_left = 434.0
margin_top = 5.0
margin_right = 474.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
text = "666"

[node name="RCexpo" type="SpinBox" parent="PitchContainer"]
margin_left = 478.0
margin_right = 552.0
margin_bottom = 24.0

[node name="YawBackground" type="Panel" parent="."]
self_modulate = Color( 0, 0, 1, 1 )
margin_left = 10.0
margin_top = 90.0
margin_right = 60.0
margin_bottom = 114.0

[node name="YawContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 20.0
margin_top = 90.0
margin_right = 600.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="YawContainer"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
text = "Yaw"
valign = 1

[node name="P" type="SpinBox" parent="YawContainer"]
margin_left = 44.0
margin_right = 118.0
margin_bottom = 24.0

[node name="I" type="SpinBox" parent="YawContainer"]
margin_left = 122.0
margin_right = 196.0
margin_bottom = 24.0

[node name="D" type="SpinBox" parent="YawContainer"]
margin_left = 200.0
margin_right = 274.0
margin_bottom = 24.0

[node name="RCrate" type="SpinBox" parent="YawContainer"]
margin_left = 278.0
margin_right = 352.0
margin_bottom = 24.0

[node name="SuperRate" type="SpinBox" parent="YawContainer"]
margin_left = 356.0
margin_right = 430.0
margin_bottom = 24.0

[node name="Vel" type="Label" parent="YawContainer"]
margin_left = 434.0
margin_top = 5.0
margin_right = 474.0
margin_bottom = 19.0
rect_min_size = Vector2( 40, 0 )
text = "666"

[node name="RCexpo" type="SpinBox" parent="YawContainer"]
margin_left = 478.0
margin_right = 552.0
margin_bottom = 24.0

[node name="RateGraph" type="Control" parent="."]
margin_left = 10.0
margin_top = 130.0
margin_right = 230.0
margin_bottom = 249.0
script = ExtResource( 2 )

[node name="CloseButton" type="Button" parent="."]
margin_left = 544.0
margin_top = 236.0
margin_right = 591.0
margin_bottom = 256.0
text = "Close"

[node name="CamAngle" type="HSlider" parent="."]
editor/display_folded = true
margin_left = 364.0
margin_top = 150.0
margin_right = 540.0
margin_bottom = 166.0
max_value = 90.0
value = 20.0
tick_count = 18
ticks_on_borders = true

[node name="Label" type="Label" parent="CamAngle"]
margin_left = 186.0
margin_right = 233.0
margin_bottom = 14.0
text = "20°"

[node name="CamAngleLabel" type="Label" parent="CamAngle"]
margin_left = -114.0
margin_right = -14.0
margin_bottom = 14.0
text = "Camera Angle:"
align = 2

[node name="Distortion" type="HSlider" parent="."]
editor/display_folded = true
margin_left = 364.0
margin_top = 174.0
margin_right = 540.0
margin_bottom = 190.0
value = 30.0
tick_count = 10
ticks_on_borders = true

[node name="Label" type="Label" parent="Distortion"]
margin_left = -104.0
margin_right = -14.0
margin_bottom = 14.0
text = "Distortion: "
align = 2

[node name="DistortionLabel" type="Label" parent="Distortion"]
margin_left = 186.0
margin_top = 1.0
margin_right = 232.0
margin_bottom = 15.0
text = "30"

[node name="FOV" type="HSlider" parent="."]
editor/display_folded = true
margin_left = 364.0
margin_top = 195.0
margin_right = 540.0
margin_bottom = 211.0
max_value = 179.0
value = 120.0

[node name="Label" type="Label" parent="FOV"]
margin_left = -104.0
margin_right = -14.0
margin_bottom = 14.0
text = "FOV:"
align = 2

[node name="FOVLabel" type="Label" parent="FOV"]
margin_left = 186.0
margin_right = 226.0
margin_bottom = 14.0
text = "120°"

[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="value_changed" from="CamAngle" to="." method="_on_CamAngle_value_changed"]
[connection signal="value_changed" from="Distortion" to="." method="_on_Distortion_value_changed"]
[connection signal="value_changed" from="FOV" to="." method="_on_FOV_value_changed"]
